grammar/tigerIrParser.cpp

// Generated from /Users/alexarmbruster/Desktop/compilers_2/grammar/tigerIr.g4 by ANTLR 4.8


#include "tigerIrListener.h"

#include "tigerIrParser.h"


using namespace antlrcpp;
using namespace antlr4;

tigerIrParser::tigerIrParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

tigerIrParser::~tigerIrParser() {
  delete _interpreter;
}

std::string tigerIrParser::getGrammarFileName() const {
  return "tigerIr.g4";
}

const std::vector<std::string>& tigerIrParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& tigerIrParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- IrProgramContext ------------------------------------------------------------------

tigerIrParser::IrProgramContext::IrProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tigerIrParser::FunctionContext* tigerIrParser::IrProgramContext::function() {
  return getRuleContext<tigerIrParser::FunctionContext>(0);
}

tigerIrParser::FunctionSeqContext* tigerIrParser::IrProgramContext::functionSeq() {
  return getRuleContext<tigerIrParser::FunctionSeqContext>(0);
}


size_t tigerIrParser::IrProgramContext::getRuleIndex() const {
  return tigerIrParser::RuleIrProgram;
}

void tigerIrParser::IrProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIrProgram(this);
}

void tigerIrParser::IrProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIrProgram(this);
}

tigerIrParser::IrProgramContext* tigerIrParser::irProgram() {
  IrProgramContext *_localctx = _tracker.createInstance<IrProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, tigerIrParser::RuleIrProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    function();
    setState(79);
    functionSeq();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionSeqContext ------------------------------------------------------------------

tigerIrParser::FunctionSeqContext::FunctionSeqContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t tigerIrParser::FunctionSeqContext::getRuleIndex() const {
  return tigerIrParser::RuleFunctionSeq;
}

void tigerIrParser::FunctionSeqContext::copyFrom(FunctionSeqContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FunctionSeqEmptyContext ------------------------------------------------------------------

tigerIrParser::FunctionSeqEmptyContext::FunctionSeqEmptyContext(FunctionSeqContext *ctx) { copyFrom(ctx); }

void tigerIrParser::FunctionSeqEmptyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionSeqEmpty(this);
}
void tigerIrParser::FunctionSeqEmptyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionSeqEmpty(this);
}
//----------------- FunctionSeqNonemptyContext ------------------------------------------------------------------

tigerIrParser::FunctionContext* tigerIrParser::FunctionSeqNonemptyContext::function() {
  return getRuleContext<tigerIrParser::FunctionContext>(0);
}

tigerIrParser::FunctionSeqContext* tigerIrParser::FunctionSeqNonemptyContext::functionSeq() {
  return getRuleContext<tigerIrParser::FunctionSeqContext>(0);
}

tigerIrParser::FunctionSeqNonemptyContext::FunctionSeqNonemptyContext(FunctionSeqContext *ctx) { copyFrom(ctx); }

void tigerIrParser::FunctionSeqNonemptyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionSeqNonempty(this);
}
void tigerIrParser::FunctionSeqNonemptyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionSeqNonempty(this);
}
tigerIrParser::FunctionSeqContext* tigerIrParser::functionSeq() {
  FunctionSeqContext *_localctx = _tracker.createInstance<FunctionSeqContext>(_ctx, getState());
  enterRule(_localctx, 2, tigerIrParser::RuleFunctionSeq);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(85);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case tigerIrParser::START_FUNCTION: {
        _localctx = dynamic_cast<FunctionSeqContext *>(_tracker.createInstance<tigerIrParser::FunctionSeqNonemptyContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(81);
        function();
        setState(82);
        functionSeq();
        break;
      }

      case tigerIrParser::EOF: {
        _localctx = dynamic_cast<FunctionSeqContext *>(_tracker.createInstance<tigerIrParser::FunctionSeqEmptyContext>(_localctx));
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

tigerIrParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* tigerIrParser::FunctionContext::START_FUNCTION() {
  return getToken(tigerIrParser::START_FUNCTION, 0);
}

std::vector<tree::TerminalNode *> tigerIrParser::FunctionContext::ID() {
  return getTokens(tigerIrParser::ID);
}

tree::TerminalNode* tigerIrParser::FunctionContext::ID(size_t i) {
  return getToken(tigerIrParser::ID, i);
}

std::vector<tree::TerminalNode *> tigerIrParser::FunctionContext::NEWLINE() {
  return getTokens(tigerIrParser::NEWLINE);
}

tree::TerminalNode* tigerIrParser::FunctionContext::NEWLINE(size_t i) {
  return getToken(tigerIrParser::NEWLINE, i);
}

tigerIrParser::TypeIdContext* tigerIrParser::FunctionContext::typeId() {
  return getRuleContext<tigerIrParser::TypeIdContext>(0);
}

tree::TerminalNode* tigerIrParser::FunctionContext::OPENPAREN() {
  return getToken(tigerIrParser::OPENPAREN, 0);
}

tigerIrParser::ParamListContext* tigerIrParser::FunctionContext::paramList() {
  return getRuleContext<tigerIrParser::ParamListContext>(0);
}

tree::TerminalNode* tigerIrParser::FunctionContext::CLOSEPAREN() {
  return getToken(tigerIrParser::CLOSEPAREN, 0);
}

tree::TerminalNode* tigerIrParser::FunctionContext::INT_LIST() {
  return getToken(tigerIrParser::INT_LIST, 0);
}

std::vector<tigerIrParser::VarListContext *> tigerIrParser::FunctionContext::varList() {
  return getRuleContexts<tigerIrParser::VarListContext>();
}

tigerIrParser::VarListContext* tigerIrParser::FunctionContext::varList(size_t i) {
  return getRuleContext<tigerIrParser::VarListContext>(i);
}

tree::TerminalNode* tigerIrParser::FunctionContext::FLOAT_LIST() {
  return getToken(tigerIrParser::FLOAT_LIST, 0);
}

tigerIrParser::FuncBodyContext* tigerIrParser::FunctionContext::funcBody() {
  return getRuleContext<tigerIrParser::FuncBodyContext>(0);
}

tree::TerminalNode* tigerIrParser::FunctionContext::END_FUNCTION() {
  return getToken(tigerIrParser::END_FUNCTION, 0);
}

tigerIrParser::MultipleNewlineContext* tigerIrParser::FunctionContext::multipleNewline() {
  return getRuleContext<tigerIrParser::MultipleNewlineContext>(0);
}


size_t tigerIrParser::FunctionContext::getRuleIndex() const {
  return tigerIrParser::RuleFunction;
}

void tigerIrParser::FunctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction(this);
}

void tigerIrParser::FunctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction(this);
}

tigerIrParser::FunctionContext* tigerIrParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 4, tigerIrParser::RuleFunction);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(tigerIrParser::START_FUNCTION);
    setState(88);
    match(tigerIrParser::ID);
    setState(89);
    match(tigerIrParser::NEWLINE);
    setState(90);
    typeId();
    setState(91);
    match(tigerIrParser::ID);
    setState(92);
    match(tigerIrParser::OPENPAREN);
    setState(93);
    paramList();
    setState(94);
    match(tigerIrParser::CLOSEPAREN);
    setState(95);
    match(tigerIrParser::NEWLINE);
    setState(96);
    match(tigerIrParser::INT_LIST);
    setState(97);
    varList();
    setState(98);
    match(tigerIrParser::NEWLINE);
    setState(99);
    match(tigerIrParser::FLOAT_LIST);
    setState(100);
    varList();
    setState(101);
    match(tigerIrParser::NEWLINE);
    setState(102);
    funcBody();
    setState(103);
    match(tigerIrParser::END_FUNCTION);
    setState(104);
    match(tigerIrParser::ID);
    setState(105);
    multipleNewline();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamListContext ------------------------------------------------------------------

tigerIrParser::ParamListContext::ParamListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t tigerIrParser::ParamListContext::getRuleIndex() const {
  return tigerIrParser::RuleParamList;
}

void tigerIrParser::ParamListContext::copyFrom(ParamListContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ParamListEmptyContext ------------------------------------------------------------------

tigerIrParser::ParamListEmptyContext::ParamListEmptyContext(ParamListContext *ctx) { copyFrom(ctx); }

void tigerIrParser::ParamListEmptyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParamListEmpty(this);
}
void tigerIrParser::ParamListEmptyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParamListEmpty(this);
}
//----------------- ParamListNonEmptyContext ------------------------------------------------------------------

tigerIrParser::ParamContext* tigerIrParser::ParamListNonEmptyContext::param() {
  return getRuleContext<tigerIrParser::ParamContext>(0);
}

tigerIrParser::ParamListTailContext* tigerIrParser::ParamListNonEmptyContext::paramListTail() {
  return getRuleContext<tigerIrParser::ParamListTailContext>(0);
}

tigerIrParser::ParamListNonEmptyContext::ParamListNonEmptyContext(ParamListContext *ctx) { copyFrom(ctx); }

void tigerIrParser::ParamListNonEmptyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParamListNonEmpty(this);
}
void tigerIrParser::ParamListNonEmptyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParamListNonEmpty(this);
}
tigerIrParser::ParamListContext* tigerIrParser::paramList() {
  ParamListContext *_localctx = _tracker.createInstance<ParamListContext>(_ctx, getState());
  enterRule(_localctx, 6, tigerIrParser::RuleParamList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(111);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case tigerIrParser::FLOAT:
      case tigerIrParser::INT:
      case tigerIrParser::VOID: {
        _localctx = dynamic_cast<ParamListContext *>(_tracker.createInstance<tigerIrParser::ParamListNonEmptyContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(107);
        param();
        setState(108);
        paramListTail();
        break;
      }

      case tigerIrParser::CLOSEPAREN: {
        _localctx = dynamic_cast<ParamListContext *>(_tracker.createInstance<tigerIrParser::ParamListEmptyContext>(_localctx));
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamListTailContext ------------------------------------------------------------------

tigerIrParser::ParamListTailContext::ParamListTailContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t tigerIrParser::ParamListTailContext::getRuleIndex() const {
  return tigerIrParser::RuleParamListTail;
}

void tigerIrParser::ParamListTailContext::copyFrom(ParamListTailContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ParamListTailNonEmptyContext ------------------------------------------------------------------

tree::TerminalNode* tigerIrParser::ParamListTailNonEmptyContext::COMMA() {
  return getToken(tigerIrParser::COMMA, 0);
}

tigerIrParser::ParamContext* tigerIrParser::ParamListTailNonEmptyContext::param() {
  return getRuleContext<tigerIrParser::ParamContext>(0);
}

tigerIrParser::ParamListTailContext* tigerIrParser::ParamListTailNonEmptyContext::paramListTail() {
  return getRuleContext<tigerIrParser::ParamListTailContext>(0);
}

tigerIrParser::ParamListTailNonEmptyContext::ParamListTailNonEmptyContext(ParamListTailContext *ctx) { copyFrom(ctx); }

void tigerIrParser::ParamListTailNonEmptyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParamListTailNonEmpty(this);
}
void tigerIrParser::ParamListTailNonEmptyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParamListTailNonEmpty(this);
}
//----------------- ParamListTailEmptyContext ------------------------------------------------------------------

tigerIrParser::ParamListTailEmptyContext::ParamListTailEmptyContext(ParamListTailContext *ctx) { copyFrom(ctx); }

void tigerIrParser::ParamListTailEmptyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParamListTailEmpty(this);
}
void tigerIrParser::ParamListTailEmptyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParamListTailEmpty(this);
}
tigerIrParser::ParamListTailContext* tigerIrParser::paramListTail() {
  ParamListTailContext *_localctx = _tracker.createInstance<ParamListTailContext>(_ctx, getState());
  enterRule(_localctx, 8, tigerIrParser::RuleParamListTail);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(118);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case tigerIrParser::COMMA: {
        _localctx = dynamic_cast<ParamListTailContext *>(_tracker.createInstance<tigerIrParser::ParamListTailNonEmptyContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(113);
        match(tigerIrParser::COMMA);
        setState(114);
        param();
        setState(115);
        paramListTail();
        break;
      }

      case tigerIrParser::CLOSEPAREN: {
        _localctx = dynamic_cast<ParamListTailContext *>(_tracker.createInstance<tigerIrParser::ParamListTailEmptyContext>(_localctx));
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

tigerIrParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tigerIrParser::TypeIdContext* tigerIrParser::ParamContext::typeId() {
  return getRuleContext<tigerIrParser::TypeIdContext>(0);
}

tree::TerminalNode* tigerIrParser::ParamContext::ID() {
  return getToken(tigerIrParser::ID, 0);
}


size_t tigerIrParser::ParamContext::getRuleIndex() const {
  return tigerIrParser::RuleParam;
}

void tigerIrParser::ParamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParam(this);
}

void tigerIrParser::ParamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParam(this);
}

tigerIrParser::ParamContext* tigerIrParser::param() {
  ParamContext *_localctx = _tracker.createInstance<ParamContext>(_ctx, getState());
  enterRule(_localctx, 10, tigerIrParser::RuleParam);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    typeId();
    setState(121);
    match(tigerIrParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeIdContext ------------------------------------------------------------------

tigerIrParser::TypeIdContext::TypeIdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t tigerIrParser::TypeIdContext::getRuleIndex() const {
  return tigerIrParser::RuleTypeId;
}

void tigerIrParser::TypeIdContext::copyFrom(TypeIdContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- TypeIdFloatContext ------------------------------------------------------------------

tree::TerminalNode* tigerIrParser::TypeIdFloatContext::FLOAT() {
  return getToken(tigerIrParser::FLOAT, 0);
}

tigerIrParser::TypeIdFloatContext::TypeIdFloatContext(TypeIdContext *ctx) { copyFrom(ctx); }

void tigerIrParser::TypeIdFloatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeIdFloat(this);
}
void tigerIrParser::TypeIdFloatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeIdFloat(this);
}
//----------------- TypeIdIntContext ------------------------------------------------------------------

tree::TerminalNode* tigerIrParser::TypeIdIntContext::INT() {
  return getToken(tigerIrParser::INT, 0);
}

tigerIrParser::TypeIdIntContext::TypeIdIntContext(TypeIdContext *ctx) { copyFrom(ctx); }

void tigerIrParser::TypeIdIntContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeIdInt(this);
}
void tigerIrParser::TypeIdIntContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeIdInt(this);
}
//----------------- TypeIdVoidContext ------------------------------------------------------------------

tree::TerminalNode* tigerIrParser::TypeIdVoidContext::VOID() {
  return getToken(tigerIrParser::VOID, 0);
}

tigerIrParser::TypeIdVoidContext::TypeIdVoidContext(TypeIdContext *ctx) { copyFrom(ctx); }

void tigerIrParser::TypeIdVoidContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeIdVoid(this);
}
void tigerIrParser::TypeIdVoidContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeIdVoid(this);
}
tigerIrParser::TypeIdContext* tigerIrParser::typeId() {
  TypeIdContext *_localctx = _tracker.createInstance<TypeIdContext>(_ctx, getState());
  enterRule(_localctx, 12, tigerIrParser::RuleTypeId);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(126);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case tigerIrParser::INT: {
        _localctx = dynamic_cast<TypeIdContext *>(_tracker.createInstance<tigerIrParser::TypeIdIntContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(123);
        match(tigerIrParser::INT);
        break;
      }

      case tigerIrParser::FLOAT: {
        _localctx = dynamic_cast<TypeIdContext *>(_tracker.createInstance<tigerIrParser::TypeIdFloatContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(124);
        match(tigerIrParser::FLOAT);
        break;
      }

      case tigerIrParser::VOID: {
        _localctx = dynamic_cast<TypeIdContext *>(_tracker.createInstance<tigerIrParser::TypeIdVoidContext>(_localctx));
        enterOuterAlt(_localctx, 3);
        setState(125);
        match(tigerIrParser::VOID);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarListContext ------------------------------------------------------------------

tigerIrParser::VarListContext::VarListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t tigerIrParser::VarListContext::getRuleIndex() const {
  return tigerIrParser::RuleVarList;
}

void tigerIrParser::VarListContext::copyFrom(VarListContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- VarListEmptyContext ------------------------------------------------------------------

tigerIrParser::VarListEmptyContext::VarListEmptyContext(VarListContext *ctx) { copyFrom(ctx); }

void tigerIrParser::VarListEmptyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarListEmpty(this);
}
void tigerIrParser::VarListEmptyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarListEmpty(this);
}
//----------------- VarListExpandContext ------------------------------------------------------------------

tree::TerminalNode* tigerIrParser::VarListExpandContext::ID() {
  return getToken(tigerIrParser::ID, 0);
}

tigerIrParser::ArrayDerefContext* tigerIrParser::VarListExpandContext::arrayDeref() {
  return getRuleContext<tigerIrParser::ArrayDerefContext>(0);
}

tree::TerminalNode* tigerIrParser::VarListExpandContext::COMMA() {
  return getToken(tigerIrParser::COMMA, 0);
}

tigerIrParser::VarListContext* tigerIrParser::VarListExpandContext::varList() {
  return getRuleContext<tigerIrParser::VarListContext>(0);
}

tigerIrParser::VarListExpandContext::VarListExpandContext(VarListContext *ctx) { copyFrom(ctx); }

void tigerIrParser::VarListExpandContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarListExpand(this);
}
void tigerIrParser::VarListExpandContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarListExpand(this);
}
//----------------- VarListSingleContext ------------------------------------------------------------------

tree::TerminalNode* tigerIrParser::VarListSingleContext::ID() {
  return getToken(tigerIrParser::ID, 0);
}

tigerIrParser::ArrayDerefContext* tigerIrParser::VarListSingleContext::arrayDeref() {
  return getRuleContext<tigerIrParser::ArrayDerefContext>(0);
}

tigerIrParser::VarListSingleContext::VarListSingleContext(VarListContext *ctx) { copyFrom(ctx); }

void tigerIrParser::VarListSingleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarListSingle(this);
}
void tigerIrParser::VarListSingleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerIrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarListSingle(this);
}
tigerIrParser::VarListContext* tigerIrParser::varList() {
  VarListContext *_localctx = _tracker.createInstance<VarListContext>(_ctx, getState());
  enterRule(_localctx, 14, tigerIrParser::RuleVarList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(136);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<VarListContext *>(_tracker.createInstance<tigerIrParser::VarListExpandContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(128);
      match(tigerIrParser::ID);
      setState(129);
      arrayDeref();
      setState(130);
      match(tigerIrParser::COMMA);
      setState(131);
      varList();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<VarListContext *>(_tracker.createInstance<tigerIrParser::VarListSingleContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(133);
      match(tigerIrParser::ID);
      setState(134);
      arrayDeref();
      break;
    }

    case 3: {
      _localctx = dynamic_cast<VarListContext *>(_tracker.createInstance<tigerIrParser::VarListEmptyContext>(_localctx));
      enterOuterAlt(_localctx, 3);

      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrayDerefContext ------------------------------------------------------------------
